<?xml version="1.0"?>
<package>
  <name>falcon_tdlas</name>
  <version>0.0.0</version>
  <description>Basic interface to communicate with the Falcon TDLAS through serial port</description>

  <maintainer email="ojedamorala@uma.es">Pepe Ojeda</maintainer>

  <license>GPLv3</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>olfaction_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>serial</build_depend>
  <run_depend>olfaction_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>serial</run_depend>

</package>
