<?xml version="1.0"?>
<package format="2">
  <name>falcon_tdlas</name>
  <version>0.0.0</version>
  <description>Basic interface to communicate with the Falcon TDLAS through serial port</description>

  <maintainer email="ojedamorala@uma.es">Pepe Ojeda</maintainer>

  <license>GPLv3</license>


  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rclcpp</build_depend>
  <build_depend>olfaction_msgs</build_depend>
  <build_depend>serial</build_depend>


  <export>
    <build_type>ament_cmake</build_type>
  </export>
  
</package>
