<?xml version="1.0"?>
<package format="2">
   <name>senseair</name>
  <version>0.0.0</version>
  <description>Interface to the senseair s8 CO2 sensor.It reads the measurements from serial port</description>

  <maintainer email="ojedamorala@uma.es">Pepe Ojeda</maintainer>
  <license>GPLv3</license>


  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rclcpp</build_depend>
  <build_depend>olfaction_msgs</build_depend>
  <build_depend>serial</build_depend>


  <export>
    <build_type>ament_cmake</build_type>
  </export>
  
</package>
