<?xml version="1.0"?>
<package>
  <name>windsonic</name>
  <version>0.0.0</version>
  <description>Interface to the windsonic anemometer.It reads the wind speed and direction from serial port</description>

  <maintainer email="jgmonroy@uma.es">Javier Monroy</maintainer>

  <license>GPLv3</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>olfaction_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>serial</build_depend>
  <run_depend>olfaction_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>serial</run_depend>

</package>
