<?xml version="1.0"?>
<package format="2">
   <name>windsonic</name>
  <version>0.0.0</version>
  <description>Interface to the windsonic anemometer.It reads the wind speed and direction from serial port</description>

  <maintainer email="jgmonroy@uma.es">Javier Monroy</maintainer>
  <license>GPLv3</license>


  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rclcpp</build_depend>
  <build_depend>olfaction_msgs</build_depend>
  <build_depend>serial</build_depend>
  <build_depend>tf2</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>tf2_geometry_msgs</build_depend>

  <build_depend>visualization_msgs</build_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
  
</package>

